frontend/src/index.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');

// TODO add css reset

html,body {
  height: 100%;
  margin: 0;
  font-family: 'Roboto', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background: var(--bg);
  color: var(--fg);
}
#root {
  height: 100%;
}

input[type="text"], input[type="password"], input[type="email"], textarea {
  background: var(--lowered);
  box-shadow: inset 0 0 2px var(--shadow);
  border: none;
  border-radius: 4px;
  color: var(--fg);
  font-family: 'Roboto', sans-serif;
  outline: none;
  resize: vertical;
}

input[type="submit"], button {
  cursor: pointer;
}

input[type="submit"], .button {
  font-family: 'Roboto', sans-serif;
  padding: 8px 16px;
  background: var(--primary);
  border: none;
  color: var(--onAccent);
  border-radius: 4px;
  font-weight: bold;

  &:hover{
    background: var(--button-hover-bg);
  }
  &:disabled{
    background: var(--button-dis-bg);
    color: var(--button-dis-fg);
  }
}

a {
  color: var(--link);
  text-decoration: none;
  &:hover {
    color: var(--linkHover);
  }
}

.irony {
  font-style: italic;
  color: var(--danger);
}

blockquote {
  border-radius: 4px;
  padding: 0.5em 0.5em 0.5em 2em;
  margin: 0.5em 0;
  background-color: var(--dim1);
  position: relative;

  &::before {
    /* somewhat hacky implementation for icon color, source: https://stackoverflow.com/a/42317014/1349366 */
    content: '';
    -webkit-mask: url('./Assets/quote.svg') no-repeat 50% 50%;
    mask: url('./Assets/quote.svg') no-repeat 50% 50%;
    -webkit-mask-size: cover;
    mask-size: cover;
    background-color: var(--button-dis-fg);

    width: 20px;
    height: 20px;
    position: absolute;
    top: 8px;
    left: 8px;
    opacity: 0.5;
  }
}

.bold {
  font-weight: bold;
}

img.image-scalable {
  cursor: zoom-in;
  max-width: 100%;
  max-height: 500px;
}
img.image-preview {
  max-width: 100%;
  max-height: none;
  cursor: zoom-out;
}

/*br {*/
/*  content: "";*/
/*  padding: 2em;*/
/*  margin: -2em;*/
/*  display: block;*/
/*  font-size: 25%;*/
/*}*/

@keyframes highlight-flash {
  from {
    background-color: transparent;
  }

  to {
    background-color: var(--highlight-bg);
  }
}

.highlight {
  /*background: var(--highlight-bg);*/
  /*transition: background-color 1s;*/
  animation-duration: 0.5s;
  animation-name: highlight-flash;
  animation-iteration-count: 6;
  animation-direction: alternate;
}

body.no-scroll {
  overflow: hidden;
  margin-right: 14px;
}

::-webkit-scrollbar {
  width: 14px;
  height: 14px;
}

::-webkit-scrollbar-thumb {
  box-shadow: inset 0 0 12px 12px var(--fgAlmostInvisible);
  border-radius: 10px;
  border: solid 3px transparent;
  &:hover{
    box-shadow: inset 0 0 12px 12px var(--fgGhost);
  }
}

::-webkit-scrollbar-track {
  background: transparent;
}

